--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第3章 构建KVM环境/4. 编译和安装QEMU.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第3章 构建KVM环境/4. 编译和安装QEMU.md
@@ -13,7 +13,7 @@
 
 <!-- /code_chunk_output -->
 
-除了在内核空间的KVM模块之外，在用户空间需要QEMU￼来模拟所需要的CPU和设备模型，以及启动客户机进程，这样才有了一个完整的KVM运行环境。
+除了在内核空间的KVM模块之外，在用户空间需要QEMU来模拟所需要的CPU和设备模型，以及启动客户机进程，这样才有了一个完整的KVM运行环境。
 
 在编译和安装了KVM并且启动到编译的内核之后，下面来看一下QEMU的编译和安装。
 
@@ -46,7 +46,7 @@ https://www.qemu.org/download/
 在本节后面讲解编译时，是以下载开发中的最新的qemu.git为例的。获取其代码仓库过程如下：
 
 ```
-[root@kvm-host ~]# git clone git://git.qemu.org/qemu.git￼
+[root@kvm-host ~]# git clone git://git.qemu.org/qemu.git
 ```
 
 # 3. 配置和编译QEMU
@@ -97,26 +97,26 @@ Standard options:
 # yum install glib2-devel
 # yum install pixman-devel
 # ./configure --target-list=x86_64-softmmu --enable-debug
-Install prefix    /usr/local￼
-BIOS directory    /usr/local/share/qemu￼
-...￼
-ELF interp prefix /usr/gnemul/qemu-%M￼
-Source path       /root/qemu￼
-<!-- 以上是指定一些目录前缀，省略十几行。可以由configure的--prefix选项影响 -->￼
-C compiler        cc￼
-Host C compiler   cc￼
-...￼
-QEMU_CFLAGS       -I/usr/include/pixman-1    -Werror -pthread -I/usr/include/glib-2.0 -I/usr/lib64/glib-2.0/include   -fPIE -DPIE -m64 -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -Wstrict-prototypes -Wredundant-decls -Wall -Wundef -Wwrite-strings -Wmissing-prototypes -fno-strict-aliasing -fno-common -fwrapv  -Wendif-labels -Wmissing-include-dirs -Wempty-body -Wnested-externs -Wformat-security -Wformat-y2k -Winit-self -Wignored-qualifiers -Wold-style-declaration -Wold-style-definition -Wtype-limits -fstack-protector-strong￼
-LDFLAGS           -Wl,--warn-common -Wl,-z,relro -Wl,-z,now -pie -m64 -g ￼
-<!-- 以上显示了后续编译qemu时会采用的编译器及编译选项。也可以由configure对应选项控制。-->￼
-...￼
-host CPU          x86_64￼
-host big endian   no￼
-target list       x86_64-softmmu   #这里就是我们--target-list指定的￼
-...￼
-VNC support       yes      #通常需要通过VNC连接到客户机中。默认￼
-...￼
-KVM support       yes      #这是对KVM的支持。默认￼
+Install prefix    /usr/local
+BIOS directory    /usr/local/share/qemu
+...
+ELF interp prefix /usr/gnemul/qemu-%M
+Source path       /root/qemu
+<!-- 以上是指定一些目录前缀，省略十几行。可以由configure的--prefix选项影响 -->
+C compiler        cc
+Host C compiler   cc
+...
+QEMU_CFLAGS       -I/usr/include/pixman-1    -Werror -pthread -I/usr/include/glib-2.0 -I/usr/lib64/glib-2.0/include   -fPIE -DPIE -m64 -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -Wstrict-prototypes -Wredundant-decls -Wall -Wundef -Wwrite-strings -Wmissing-prototypes -fno-strict-aliasing -fno-common -fwrapv  -Wendif-labels -Wmissing-include-dirs -Wempty-body -Wnested-externs -Wformat-security -Wformat-y2k -Winit-self -Wignored-qualifiers -Wold-style-declaration -Wold-style-definition -Wtype-limits -fstack-protector-strong
+LDFLAGS           -Wl,--warn-common -Wl,-z,relro -Wl,-z,now -pie -m64 -g 
+<!-- 以上显示了后续编译qemu时会采用的编译器及编译选项。也可以由configure对应选项控制。-->
+...
+host CPU          x86_64
+host big endian   no
+target list       x86_64-softmmu   #这里就是我们--target-list指定的
+...
+VNC support       yes      #通常需要通过VNC连接到客户机中。默认
+...
+KVM support       yes      #这是对KVM的支持。默认
 ...
 ```
 
