--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第5章 KVM核心基础功能/1. 硬件平台和软件版本说明.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第5章 KVM核心基础功能/1. 硬件平台和软件版本说明.md
@@ -22,34 +22,34 @@ https://cdn.kernel.org/pub/linux/kernel/v4.x/linux-4.8.5.tar.xz
 如果是在linux-stable.git的源代码仓库中，可以查询到v4.8.5这个标签，然后以这个标签checkout。命令行如下：
 
 ```
-[root@kvm-host linux-stable]# git tag -l | grep v4.8￼
-v4.8￼
-v4.8-rc1￼
-v4.8-rc2￼
-v4.8-rc3￼
-v4.8-rc4￼
-v4.8-rc5￼
-v4.8-rc6￼
-v4.8-rc7￼
-v4.8-rc8￼
-v4.8.1￼
-v4.8.2￼
-v4.8.3￼
-v4.8.4￼
-v4.8.5 ￼
-[root@kvm-host linux-stable]# git checkout v4.8.5￼
-Checking out files: 100% (10672/10672), done.￼
-Note: checking out 'v4.8.5'.￼
-￼
-You are in 'detached HEAD' state. You can look around, make experimental￼
-changes and commit them, and you can discard any commits you make in this￼
-state without impacting any branches by performing another checkout.￼
-￼
-If you want to create a new branch to retain commits you create, you may￼
-do so (now or later) by using -b with the checkout command again. Example:￼
-￼
-    git checkout -b new_branch_name￼
-￼
+[root@kvm-host linux-stable]# git tag -l | grep v4.8
+v4.8
+v4.8-rc1
+v4.8-rc2
+v4.8-rc3
+v4.8-rc4
+v4.8-rc5
+v4.8-rc6
+v4.8-rc7
+v4.8-rc8
+v4.8.1
+v4.8.2
+v4.8.3
+v4.8.4
+v4.8.5 
+[root@kvm-host linux-stable]# git checkout v4.8.5
+Checking out files: 100% (10672/10672), done.
+Note: checking out 'v4.8.5'.
+
+You are in 'detached HEAD' state. You can look around, make experimental
+changes and commit them, and you can discard any commits you make in this
+state without impacting any branches by performing another checkout.
+
+If you want to create a new branch to retain commits you create, you may
+do so (now or later) by using -b with the checkout command again. Example:
+
+    git checkout -b new_branch_name
+
 HEAD is now at 3cf0296... Linux 4.8.5
 ```
 
@@ -64,26 +64,26 @@ http://wiki.qemu-project.org/download/qemu-2.7.0.tar.bz2
 在qemu.git的GIT代码仓库中，可以先通过“git tag”命令查看有哪些标签，然后找到“v2.7.0”标签，用“git checkout v2.7.0”（或“git reset--hard v2.7.0”）命令切换到2.7.0的QEMU版本。此过程的命令行演示如下：
 
 ```
-[root@kvm-host qemu]# git tag -l | grep 2.7￼
-v2.7.0￼
-v2.7.0-rc0￼
-v2.7.0-rc1￼
-v2.7.0-rc2￼
-v2.7.0-rc3￼
-v2.7.0-rc4￼
-v2.7.0-rc5￼
-[root@kvm-host qemu]# git checkout v2.7.0￼
-Note: checking out 'v2.7.0'.￼
-￼
-You are in 'detached HEAD' state. You can look around, make experimental￼
-changes and commit them, and you can discard any commits you make in this￼
-state without impacting any branches by performing another checkout.￼
-￼
-If you want to create a new branch to retain commits you create, you may￼
-do so (now or later) by using -b with the checkout command again. Example:￼
-￼
-    git checkout -b new_branch_name￼
-￼
+[root@kvm-host qemu]# git tag -l | grep 2.7
+v2.7.0
+v2.7.0-rc0
+v2.7.0-rc1
+v2.7.0-rc2
+v2.7.0-rc3
+v2.7.0-rc4
+v2.7.0-rc5
+[root@kvm-host qemu]# git checkout v2.7.0
+Note: checking out 'v2.7.0'.
+
+You are in 'detached HEAD' state. You can look around, make experimental
+changes and commit them, and you can discard any commits you make in this
+state without impacting any branches by performing another checkout.
+
+If you want to create a new branch to retain commits you create, you may
+do so (now or later) by using -b with the checkout command again. Example:
+
+    git checkout -b new_branch_name
+
 HEAD is now at 1dc33ed... Update version for v2.7.0 release
 ```
 
