--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第5章 KVM核心基础功能/2. CPU配置.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第5章 KVM核心基础功能/2. CPU配置.md
@@ -90,44 +90,44 @@ vCPU在KVM中的这3种执行模式下的转换如图5\-1所示。
 例如，在Linux中，下面的Bash脚本（cpu\-info.sh）可以根据/proc/cpuinfo文件来检查当前系统中的CPU数量、多核及超线程的使用情况。
 
 ```sh
-#!/bin/bash￼
-#filename: cpu-info.sh￼
-#this script only works in a Linux system which has one or more identical physical CPU(s).￼
-￼
-echo -n "logical CPU number in total: "￼
-#逻辑CPU个数￼
-cat /proc/cpuinfo | grep "processor" | wc -l￼
-￼
-#有些系统没有多核也没有打开超线程，就直接退出脚本￼
-cat /proc/cpuinfo | grep -qi "core id"￼
-if [ $? -ne 0 ]; then￼
-    echo "Warning. No multi-core or hyper-threading is enabled."￼
-    exit 0;￼
-fi￼
-￼
-echo -n "physical CPU number in total: "￼
-#物理CPU个数￼
-cat /proc/cpuinfo | grep "physical id" | sort | uniq | wc -l￼
-￼
-echo -n "core number in a physical CPU: "￼
-#每个物理CPU上core的个数(未计入超线程)￼
-core_per_phy_cpu=$(cat /proc/cpuinfo | grep "core id" | sort | uniq | wc -l)￼
-echo $core_per_phy_cpu￼
-￼
-echo -n "logical CPU number in a physical CPU: "￼
-#每个物理CPU中逻辑CPU(可能是core、threads或both)的个数￼
-logical_cpu_per_phy_cpu=$(cat /proc/cpuinfo | grep "siblings" | sort | uniq | awk- F: '{print $2}')￼
-echo $logical_cpu_per_phy_cpu￼
-￼
-#是否打开超线程，以及每个core上的超线程数目￼
-#如果在同一个物理CPU上的两个逻辑CPU具有相同的”core id”，那么超线程是打开的￼
-#此处根据前面计算的core_per_phy_cpu和logical_core_per_phy_cpu的比较来查看超线程￼
-if [ $logical_cpu_per_phy_cpu -gt $core_per_phy_cpu ]; then￼
-    echo "Hyper threading is enabled. Each core has $(expr $logical_cpu_per_phy_cpu / $core_per_phy_cpu ) threads."￼
-elif [ $logical_cpu_per_phy_cpu -eq $core_per_phy_cpu ]; then￼
-    echo "Hyper threading is NOT enabled."￼
-else￼
-    echo "Error. There's something wrong."￼
+#!/bin/bash
+#filename: cpu-info.sh
+#this script only works in a Linux system which has one or more identical physical CPU(s).
+
+echo -n "logical CPU number in total: "
+#逻辑CPU个数
+cat /proc/cpuinfo | grep "processor" | wc -l
+
+#有些系统没有多核也没有打开超线程，就直接退出脚本
+cat /proc/cpuinfo | grep -qi "core id"
+if [ $? -ne 0 ]; then
+    echo "Warning. No multi-core or hyper-threading is enabled."
+    exit 0;
+fi
+
+echo -n "physical CPU number in total: "
+#物理CPU个数
+cat /proc/cpuinfo | grep "physical id" | sort | uniq | wc -l
+
+echo -n "core number in a physical CPU: "
+#每个物理CPU上core的个数(未计入超线程)
+core_per_phy_cpu=$(cat /proc/cpuinfo | grep "core id" | sort | uniq | wc -l)
+echo $core_per_phy_cpu
+
+echo -n "logical CPU number in a physical CPU: "
+#每个物理CPU中逻辑CPU(可能是core、threads或both)的个数
+logical_cpu_per_phy_cpu=$(cat /proc/cpuinfo | grep "siblings" | sort | uniq | awk- F: '{print $2}')
+echo $logical_cpu_per_phy_cpu
+
+#是否打开超线程，以及每个core上的超线程数目
+#如果在同一个物理CPU上的两个逻辑CPU具有相同的”core id”，那么超线程是打开的
+#此处根据前面计算的core_per_phy_cpu和logical_core_per_phy_cpu的比较来查看超线程
+if [ $logical_cpu_per_phy_cpu -gt $core_per_phy_cpu ]; then
+    echo "Hyper threading is enabled. Each core has $(expr $logical_cpu_per_phy_cpu / $core_per_phy_cpu ) threads."
+elif [ $logical_cpu_per_phy_cpu -eq $core_per_phy_cpu ]; then
+    echo "Hyper threading is NOT enabled."
+else
+    echo "Error. There's something wrong."
 fi
 ```
 
@@ -160,7 +160,7 @@ SMP是如此的普及和被广泛使用，而**QEMU**在给**客户机模拟CPU*
 
 ### 2.3.2. 默认不加-smp
 
-示例1：￼
+示例1：
 
 ```
 qemu-system-x86_64 -m 1G rhel7.img
@@ -169,58 +169,58 @@ qemu-system-x86_64 -m 1G rhel7.img
 **不加smp参数**，使用其**默认值1！！！**，在**客户机**中查看CPU情况，如下：
 
 ```
-[root@kvm-guest ~]# cat /proc/cpuinfo￼
-processor       : 0￼
-vendor_id       : AuthenticAMD￼
-cpu family      : 6￼
-model           : 6￼
-model name      : QEMU Virtual CPU version 2.5+￼
-stepping        : 3￼
-cpu MHz         : 3591.617￼
-cache size      : 512 KB￼
-physical id     : 0￼
-siblings        : 1￼
-core id        : 0￼
-cpu cores        : 1￼
-apciid        : 0￼
-initial apicid  : 0￼
-fpu             : yes￼
-fpu_exception   : yes￼
-cpuid level     : 13￼
-wp              : yes￼
-flags           : fpu de pse tsc msr pae mce cx8 apic sep mtrr pge mca cmov pat pse36￼
-                  clflush mmx fxsr sse sse2 syscall nx lm nopl pni cx16 hypervisor￼
-                  lahf_lm svm￼
-bogomips        : 7183.23￼
-TLB size        : 1024 4K pages￼
-clflush size     : 64￼
-cache_alignment : 64￼
-address sizes   : 40 bits physical, 48 bits virtual￼
-power management:￼
-[root@kvm-guest ~]# ls /sys/devices/system/cpu/￼
-cpu0 isolated modalias offline possible present￼
+[root@kvm-guest ~]# cat /proc/cpuinfo
+processor       : 0
+vendor_id       : AuthenticAMD
+cpu family      : 6
+model           : 6
+model name      : QEMU Virtual CPU version 2.5+
+stepping        : 3
+cpu MHz         : 3591.617
+cache size      : 512 KB
+physical id     : 0
+siblings        : 1
+core id        : 0
+cpu cores        : 1
+apciid        : 0
+initial apicid  : 0
+fpu             : yes
+fpu_exception   : yes
+cpuid level     : 13
+wp              : yes
+flags           : fpu de pse tsc msr pae mce cx8 apic sep mtrr pge mca cmov pat pse36
+                  clflush mmx fxsr sse sse2 syscall nx lm nopl pni cx16 hypervisor
+                  lahf_lm svm
+bogomips        : 7183.23
+TLB size        : 1024 4K pages
+clflush size     : 64
+cache_alignment : 64
+address sizes   : 40 bits physical, 48 bits virtual
+power management:
+[root@kvm-guest ~]# ls /sys/devices/system/cpu/
+cpu0 isolated modalias offline possible present
 cpuidle kernel_max nohz_full online power uevent
 ```
 
 由上面的输出信息可知，客户机系统识别到**1个QEMU模拟的CPU（cpu0**），并且在**QEMU monitor**（**默认**按**Alt+Ctrl+2**组合键切换到monitor）中用“info cpus”命令可以看到客户机中的CPU数量及其对应QEMU线程的ID，如下所示：
 
 ```
-(qemu) info cpus￼
+(qemu) info cpus
 * CPU #0: pc=0xffffffff81058e96 (halted) thread_id=10747
 ```
 
 在**宿主机**中看到相应的**QEMU进程和线程**如下：
 
 ```
-[root@kvm-host ~]# ps -eLf | grep qemu￼
-root   10744  9335 10744  0  4 15:30 pts/0  00:00:11 qemu-system-x86_64 rhel7.img -m 1G￼
-root   10744  9335 10745  0  4 15:30 pts/0  00:00:00 qemu-system-x86_64 rhel7.img -m 1G￼
-root   10744  9335 10747 32  4 15:30 pts/0  00:07:51 qemu-system-x86_64 rhel7.img -m 1G￼
-root   10744  9335 10748  0  4 15:30 pts/0  00:00:01 qemu-system-x86_64 rhel7.img -m 1G￼
+[root@kvm-host ~]# ps -eLf | grep qemu
+root   10744  9335 10744  0  4 15:30 pts/0  00:00:11 qemu-system-x86_64 rhel7.img -m 1G
+root   10744  9335 10745  0  4 15:30 pts/0  00:00:00 qemu-system-x86_64 rhel7.img -m 1G
+root   10744  9335 10747 32  4 15:30 pts/0  00:07:51 qemu-system-x86_64 rhel7.img -m 1G
+root   10744  9335 10748  0  4 15:30 pts/0  00:00:01 qemu-system-x86_64 rhel7.img -m 1G
 root   11394  9766 11394  0  1 15:54 pts/2  00:00:00 grep --color=auto qemu
 ```
 
-由以上信息可以看出，PID（Process ID）为10744的进程是客户机的进程，它产生了1个线程（线程ID为10747）作为客户机的vCPU运行在宿主机中￼。其中，**ps命令**的\-**L参数**指定打印出**线程的ID和线程的个数**，\-**e参数**指定选择**所有的进程**，\-**f参数**指定选择**打印出完全的各列**。
+由以上信息可以看出，PID（Process ID）为10744的进程是客户机的进程，它产生了1个线程（线程ID为10747）作为客户机的vCPU运行在宿主机中。其中，**ps命令**的\-**L参数**指定打印出**线程的ID和线程的个数**，\-**e参数**指定选择**所有的进程**，\-**f参数**指定选择**打印出完全的各列**。
 
 ### 2.3.3. -smp 8
 
@@ -233,15 +233,15 @@ qemu-system-x86_64 -smp 8 -m 8G rhel7.img
 “\-smp 8”表示分配了**8个虚拟的CPU给客户机**，在客户机中用前面提到的“cpu\-info.sh”脚本查看CPU情况，如下：
 
 ```
-[root@kvm-guest ~]# cat /proc/cpuinfo￼
-<! --  此处省略/proc/cpuinfo的输出细节 -->￼
-[root@kvm-guest ~]# ./cpu-info.sh        #这个是前面提到的Bash脚本￼
-logical CPU number in total: 8￼
-physical CPU number in total: 8￼
-core number in a physical CPU: 1￼
-logical CPU number in a physical CPU: 1￼
-Hyper threading is NOT enabled.￼
-[root@kvm-guest ~]# ls /sys/devices/system/cpu/￼
+[root@kvm-guest ~]# cat /proc/cpuinfo
+<! --  此处省略/proc/cpuinfo的输出细节 -->
+[root@kvm-guest ~]# ./cpu-info.sh        #这个是前面提到的Bash脚本
+logical CPU number in total: 8
+physical CPU number in total: 8
+core number in a physical CPU: 1
+logical CPU number in a physical CPU: 1
+Hyper threading is NOT enabled.
+[root@kvm-guest ~]# ls /sys/devices/system/cpu/
 cpu0 cpu1 cpu2 cpu3 cpu4 cpu5 cpu6 cpu7 cpuidle isolated kernel_max modalias nohz_full offline online possible power present uevent
 ```
 
@@ -250,35 +250,35 @@ cpu0 cpu1 cpu2 cpu3 cpu4 cpu5 cpu6 cpu7 cpuidle isolated kernel_max modalias noh
 在QEMU monitor中查询CPU状态，如下：
 
 ```
-QEMU 2.7.0 monitor - type 'help' for more information￼
-(qemu) VNC server running on ::1:5900￼
-(qemu) info cpus￼
-* CPU #0: pc=0xffffffff81060eb6 (halted) thread_id=186374￼
-  CPU #1: pc=0xffffffff81060eb6 (halted) thread_id=186375￼
-  CPU #2: pc=0xffffffff81060eb6 (halted) thread_id=186376￼
-  CPU #3: pc=0xffffffff81060eb6 (halted) thread_id=186377￼
-  CPU #4: pc=0xffffffff81060eb6 (halted) thread_id=186378￼
-  CPU #5: pc=0xffffffff81060eb6 (halted) thread_id=186379￼
-  CPU #6: pc=0xffffffff81060eb6 (halted) thread_id=186380￼
+QEMU 2.7.0 monitor - type 'help' for more information
+(qemu) VNC server running on ::1:5900
+(qemu) info cpus
+* CPU #0: pc=0xffffffff81060eb6 (halted) thread_id=186374
+  CPU #1: pc=0xffffffff81060eb6 (halted) thread_id=186375
+  CPU #2: pc=0xffffffff81060eb6 (halted) thread_id=186376
+  CPU #3: pc=0xffffffff81060eb6 (halted) thread_id=186377
+  CPU #4: pc=0xffffffff81060eb6 (halted) thread_id=186378
+  CPU #5: pc=0xffffffff81060eb6 (halted) thread_id=186379
+  CPU #6: pc=0xffffffff81060eb6 (halted) thread_id=186380
   CPU #7: pc=0xffffffff81060eb6 (halted) thread_id=186381
 ```
 
 在宿主机中看到相应的QEMU进程和线程如下：
 
 ```
-[root@kvm-host ~]# ps -eLf | grep qemu￼
-root     186360  96470 186360  0   12 21:43 pts/4    00:00:01 qemu-system-x86_64 ia32e_rhel7u3_kvm.img -smp 8 -m 8G￼
-root     186360  96470 186361  0   12 21:43 pts/4    00:00:00 qemu-system-x86_64 ia32e_rhel7u3_kvm.img -smp 8 -m 8G￼
-root     186360  96470 186374  7   12 21:43 pts/4    00:00:15 qemu-system-x86_64 ia32e_rhel7u3_kvm.img -smp 8 -m 8G￼
-root     186360  96470 186375  1   12 21:43 pts/4    00:00:03 qemu-system-x86_64 ia32e_rhel7u3_kvm.img -smp 8 -m 8G￼
-root     186360  96470 186376  1   12 21:43 pts/4    00:00:03 qemu-system-x86_64 ia32e_rhel7u3_kvm.img -smp 8 -m 8G￼
-root     186360  96470 186377  1   12 21:43 pts/4    00:00:03 qemu-system-x86_64 ia32e_rhel7u3_kvm.img -smp 8 -m 8G￼
-root     186360  96470 186378  1   12 21:43 pts/4    00:00:03 qemu-system-x86_64 ia32e_rhel7u3_kvm.img -smp 8 -m 8G￼
-root     186360  96470 186379  1   12 21:43 pts/4    00:00:03 qemu-system-x86_64 ia32e_rhel7u3_kvm.img -smp 8 -m 8G￼
-root     186360  96470 186380  1   12 21:43 pts/4    00:00:04 qemu-system-x86_64 ia32e_rhel7u3_kvm.img -smp 8 -m 8G￼
-root     186360  96470 186381  1   12 21:43 pts/4    00:00:03 qemu-system-x86_64 ia32e_rhel7u3_kvm.img -smp 8 -m 8G￼
-root     186360  96470 186383  0   12 21:43 pts/4    00:00:01 qemu-system-x86_64 ia32e_rhel7u3_kvm.img -smp 8 -m 8G ￼
-root     186360  96470 186492  0   12 21:46 pts/4    00:00:00 qemu-system-x86_64 ia32e_rhel7u3_kvm.img -smp 8 -m 8G ￼
+[root@kvm-host ~]# ps -eLf | grep qemu
+root     186360  96470 186360  0   12 21:43 pts/4    00:00:01 qemu-system-x86_64 ia32e_rhel7u3_kvm.img -smp 8 -m 8G
+root     186360  96470 186361  0   12 21:43 pts/4    00:00:00 qemu-system-x86_64 ia32e_rhel7u3_kvm.img -smp 8 -m 8G
+root     186360  96470 186374  7   12 21:43 pts/4    00:00:15 qemu-system-x86_64 ia32e_rhel7u3_kvm.img -smp 8 -m 8G
+root     186360  96470 186375  1   12 21:43 pts/4    00:00:03 qemu-system-x86_64 ia32e_rhel7u3_kvm.img -smp 8 -m 8G
+root     186360  96470 186376  1   12 21:43 pts/4    00:00:03 qemu-system-x86_64 ia32e_rhel7u3_kvm.img -smp 8 -m 8G
+root     186360  96470 186377  1   12 21:43 pts/4    00:00:03 qemu-system-x86_64 ia32e_rhel7u3_kvm.img -smp 8 -m 8G
+root     186360  96470 186378  1   12 21:43 pts/4    00:00:03 qemu-system-x86_64 ia32e_rhel7u3_kvm.img -smp 8 -m 8G
+root     186360  96470 186379  1   12 21:43 pts/4    00:00:03 qemu-system-x86_64 ia32e_rhel7u3_kvm.img -smp 8 -m 8G
+root     186360  96470 186380  1   12 21:43 pts/4    00:00:04 qemu-system-x86_64 ia32e_rhel7u3_kvm.img -smp 8 -m 8G
+root     186360  96470 186381  1   12 21:43 pts/4    00:00:03 qemu-system-x86_64 ia32e_rhel7u3_kvm.img -smp 8 -m 8G
+root     186360  96470 186383  0   12 21:43 pts/4    00:00:01 qemu-system-x86_64 ia32e_rhel7u3_kvm.img -smp 8 -m 8G 
+root     186360  96470 186492  0   12 21:46 pts/4    00:00:00 qemu-system-x86_64 ia32e_rhel7u3_kvm.img -smp 8 -m 8G 
 root     186519 178215 186519  0    1 21:47 pts/6    00:00:00 grep --color=auto qemu
 ```
 
@@ -295,15 +295,15 @@ qemu-system-x86_64 -m 8G -smp 8,sockets=2,cores=2,threads=2 rhel7.img
 通过\-smp参数详细定义了客户机中SMP的架构，在客户中得到的CPU信息如下：
 
 ```
-[root@kvm-guest ~]# cat /proc/cpuinfo￼
-<! --  此处省略/proc/cpuinfo的输出细节 -->￼
-[root@kvm-guest ~]# sh cpu-info.sh ￼
-logical CPU number in total: 8￼
-physical CPU number in total: 2￼
-core number in a physical CPU: 2￼
-logical CPU number in a physical CPU: 4￼
-Hyper threading is enabled. Each core has 2 threads.￼
-[root@kvm-guest ~]# ls /sys/devices/system/cpu/￼
+[root@kvm-guest ~]# cat /proc/cpuinfo
+<! --  此处省略/proc/cpuinfo的输出细节 -->
+[root@kvm-guest ~]# sh cpu-info.sh 
+logical CPU number in total: 8
+physical CPU number in total: 2
+core number in a physical CPU: 2
+logical CPU number in a physical CPU: 4
+Hyper threading is enabled. Each core has 2 threads.
+[root@kvm-guest ~]# ls /sys/devices/system/cpu/
 cpu0  cpu1  cpu2  cpu3  cpu4  cpu5  cpu6  cpu7  cpuidle  isolated  kernel_max  microcode  modalias  nohz_full  offline  online  possible  power  present  uevent
 ```
 
@@ -320,54 +320,54 @@ qemu-system-x86_64 -m 8G -smp 4,maxcpus=8 rhel7.img -enable-kvm
 通过\-smp参数详细定义了客户机中**最多有8个CPU**可用，在系统启动之时有**4个处于开启状态**，在客户中得到的CPU信息如下：
 
 ```
-[root@kvm-guest ~]# sh cpu-info.sh ￼
-logical CPU number in total: 4￼
-physical CPU number in total: 4￼
-core number in a physical CPU: 1￼
-logical CPU number in a physical CPU: 1￼
-Hyper threading is NOT enabled.￼
+[root@kvm-guest ~]# sh cpu-info.sh 
+logical CPU number in total: 4
+physical CPU number in total: 4
+core number in a physical CPU: 1
+logical CPU number in a physical CPU: 1
+Hyper threading is NOT enabled.
 
-[root@kvm-guest ~]# lscpu￼
-Architecture:          x86_64￼
-CPU op-mode(s):        32-bit, 64-bit￼
-Byte Order:            Little Endian￼
-CPU(s):                4￼
-On-line CPU(s) list:   0-3￼
-Thread(s) per core:    1￼
-Core(s) per socket:    1￼
-Socket(s):             4￼
-NUMA node(s):          1￼
-Vendor ID:             GenuineIntel￼
-CPU family:            6￼
-Model:                 6￼
-Model name:            QEMU Virtual CPU version 2.5+￼
-Stepping:              3￼
-CPU MHz:               2194.980￼
-BogoMIPS:              4389.69￼
-Hypervisor vendor:     KVM￼
-Virtualization type:   full￼
-L1d cache:             32K￼
-L1i cache:             32K￼
-L2 cache:              4096K￼
+[root@kvm-guest ~]# lscpu
+Architecture:          x86_64
+CPU op-mode(s):        32-bit, 64-bit
+Byte Order:            Little Endian
+CPU(s):                4
+On-line CPU(s) list:   0-3
+Thread(s) per core:    1
+Core(s) per socket:    1
+Socket(s):             4
+NUMA node(s):          1
+Vendor ID:             GenuineIntel
+CPU family:            6
+Model:                 6
+Model name:            QEMU Virtual CPU version 2.5+
+Stepping:              3
+CPU MHz:               2194.980
+BogoMIPS:              4389.69
+Hypervisor vendor:     KVM
+Virtualization type:   full
+L1d cache:             32K
+L1i cache:             32K
+L2 cache:              4096K
 NUMA node0 CPU(s):     0-3
 ```
 
 可以看到，**客户机**启动之后有**4个CPU**，分别位于**4个socket**的**单一core**上。
 
-下面我们来做**热插拔操作**，切换到QEMU monitor执行“cpu\-add￼\<id\>”的指令。
+下面我们来做**热插拔操作**，切换到QEMU monitor执行“cpu\-add\<id\>”的指令。
 
 ```
-(qemu) info cpus￼
-* CPU #0: pc=0xffffffff81060eb6 (halted) thread_id=190609￼
-  CPU #1: pc=0xffffffff81060eb6 (halted) thread_id=190610￼
-  CPU #2: pc=0xffffffff81060eb6 (halted) thread_id=190611￼
-  CPU #3: pc=0xffffffff81060eb6 (halted) thread_id=190612￼
-(qemu) cpu-add 7￼
-(qemu) info cpus￼
-* CPU #0: pc=0xffffffff81060eb6 (halted) thread_id=190609￼
-  CPU #1: pc=0xffffffff81060eb6 (halted) thread_id=190610￼
-  CPU #2: pc=0xffffffff81060eb6 (halted) thread_id=190611￼
-  CPU #3: pc=0xffffffff81060eb6 (halted) thread_id=190612￼
+(qemu) info cpus
+* CPU #0: pc=0xffffffff81060eb6 (halted) thread_id=190609
+  CPU #1: pc=0xffffffff81060eb6 (halted) thread_id=190610
+  CPU #2: pc=0xffffffff81060eb6 (halted) thread_id=190611
+  CPU #3: pc=0xffffffff81060eb6 (halted) thread_id=190612
+(qemu) cpu-add 7
+(qemu) info cpus
+* CPU #0: pc=0xffffffff81060eb6 (halted) thread_id=190609
+  CPU #1: pc=0xffffffff81060eb6 (halted) thread_id=190610
+  CPU #2: pc=0xffffffff81060eb6 (halted) thread_id=190611
+  CPU #3: pc=0xffffffff81060eb6 (halted) thread_id=190612
   CPU #7: pc=0xffffffff81060eb6 (halted) thread_id=190690
 ```
 
@@ -376,36 +376,36 @@ NUMA node0 CPU(s):     0-3
 再在**客户机里面检查**：
 
 ```
-[root@kvm-guest ~]# lscpu￼
-Architecture:          x86_64￼
-CPU op-mode(s):        32-bit, 64-bit￼
-Byte Order:            Little Endian￼
-CPU(s):                5￼
-On-line CPU(s) list:   0-4￼
-Thread(s) per core:    1￼
-Core(s) per socket:    1￼
-Socket(s):             5￼
-NUMA node(s):          1￼
-Vendor ID:             GenuineIntel￼
-CPU family:            6￼
-Model:                 6￼
-Model name:            QEMU Virtual CPU version 2.5+￼
-Stepping:              3￼
-CPU MHz:               2194.980￼
-BogoMIPS:              4389.69￼
-Hypervisor vendor:     KVM￼
-Virtualization type:   full￼
-L1d cache:             32K￼
-L1i cache:             32K￼
-L2 cache:              4096K￼
-NUMA node0 CPU(s):     0-4￼
-[root@kvm-guest ~]# sh cpu-info.sh ￼
-logical CPU number in total: 5￼
-physical CPU number in total: 5￼
-core number in a physical CPU: 1￼
-logical CPU number in a physical CPU: 1￼
-Hyper threading is NOT enabled. ￼
-[root@kvm-guest ~]# ls /sys/devices/system/cpu/￼
+[root@kvm-guest ~]# lscpu
+Architecture:          x86_64
+CPU op-mode(s):        32-bit, 64-bit
+Byte Order:            Little Endian
+CPU(s):                5
+On-line CPU(s) list:   0-4
+Thread(s) per core:    1
+Core(s) per socket:    1
+Socket(s):             5
+NUMA node(s):          1
+Vendor ID:             GenuineIntel
+CPU family:            6
+Model:                 6
+Model name:            QEMU Virtual CPU version 2.5+
+Stepping:              3
+CPU MHz:               2194.980
+BogoMIPS:              4389.69
+Hypervisor vendor:     KVM
+Virtualization type:   full
+L1d cache:             32K
+L1i cache:             32K
+L2 cache:              4096K
+NUMA node0 CPU(s):     0-4
+[root@kvm-guest ~]# sh cpu-info.sh 
+logical CPU number in total: 5
+physical CPU number in total: 5
+core number in a physical CPU: 1
+logical CPU number in a physical CPU: 1
+Hyper threading is NOT enabled. 
+[root@kvm-guest ~]# ls /sys/devices/system/cpu/
 cpu0  cpu1  cpu2  cpu3  cpu4  cpuidle  isolated  kernel_max  microcode  modalias  nohz_full  offline  online  possible  power  present  uevent
 ```
 
@@ -508,33 +508,33 @@ qemu-system-x86_64 rhel7.img
 在客户机看到的CPU信息如下:
 
 ```
-[root@kvm-guest ~]# cat /proc/cpuinfo￼
-processor       : 0￼
-vendor_id       : AuthenticAMD￼
-cpu family      : 6￼
-model           : 6￼
-model name      : QEMU Virtual CPU version 2.5+￼
-stepping        : 3￼
-cpu MHz         : 3591.617￼
-cache size      : 512 KB￼
-physical id     : 0￼
-siblings        : 1￼
-core id         : 0￼
-cpu cores       : 1￼
-apciid          : 0￼
-initial apicid  : 0￼
-fpu             : yes￼
-fpu_exception   : yes￼
-cpuid level     : 13￼
-wp              : yes￼
-flags           : fpu de pse tsc msr pae mce cx8 apic sep mtrr pge mca cmov pat pse36￼
-                   clflush mmx fxsr sse sse2 syscall nx lm nopl pni cx16 hypervisor￼
-                   lahf_lm svm￼
-bogomips         : 7183.23￼
-TLB size        : 1024 4K pages￼
-clflush size     : 64￼
-cache_alignment : 64￼
-address sizes   : 40 bits physical, 48 bits virtual￼
+[root@kvm-guest ~]# cat /proc/cpuinfo
+processor       : 0
+vendor_id       : AuthenticAMD
+cpu family      : 6
+model           : 6
+model name      : QEMU Virtual CPU version 2.5+
+stepping        : 3
+cpu MHz         : 3591.617
+cache size      : 512 KB
+physical id     : 0
+siblings        : 1
+core id         : 0
+cpu cores       : 1
+apciid          : 0
+initial apicid  : 0
+fpu             : yes
+fpu_exception   : yes
+cpuid level     : 13
+wp              : yes
+flags           : fpu de pse tsc msr pae mce cx8 apic sep mtrr pge mca cmov pat pse36
+                   clflush mmx fxsr sse sse2 syscall nx lm nopl pni cx16 hypervisor
+                   lahf_lm svm
+bogomips         : 7183.23
+TLB size        : 1024 4K pages
+clflush size     : 64
+cache_alignment : 64
+address sizes   : 40 bits physical, 48 bits virtual
 power management:
 ```
 
@@ -550,37 +550,37 @@ qemu-system-x86_64 rhel7.img -cpu Broadwell -smp 8 -m 16G -enable-kvm
 
 在客户机中查看CPU信息如下：
 ```
-[root@kvm-guest ~]# cat /proc/cpuinfo ￼
-processor      : 0￼
-vendor_id      : GenuineIntel￼
-cpu family      : 6￼
-model      : 61￼
-model name      : Intel Core Processor (Broadwell)￼
-stepping      : 2￼
-microcode      : 0x1￼
-cpu MHz      : 2194.655￼
-cache size      : 4096 KB￼
-physical id   : 0￼
-siblings      : 1￼
-core id      : 0￼
-cpu cores      : 1￼
-apicid      : 0￼
-initial apicid   : 0￼
-fpu         : yes￼
-fpu_exception   : yes￼
-cpuid level   : 13￼
-wp         : yes￼
-flags      : fpu vme de pse tsc msr pae mce cx8 apic sep mtrr pge mca￼
- cmov pat pse36 clflush mmx fxsr sse sse2 syscall nx rdtscp lm￼
- constant_tsc rep_good nopl xtopology eagerfpu pni pclmulqdq ￼
- ssse3 fma cx16 pcid sse4_1 sse4_2 x2apic movbe popcnt tsc_ ￼
- deadline_timer aes xsave avx f16c rdrand hypervisor lahf_lm ￼
- abm 3dnowprefetch arat fsgsbase bmi1 hle avx2 smep bmi2 erms￼
- invpcid rtm rdseed adx smap xsaveopt￼
-bogomips      : 4389.69￼
-clflush size   : 64￼
-cache_alignment   : 64￼
-address sizes   : 40 bits physical, 48 bits virtual￼
+[root@kvm-guest ~]# cat /proc/cpuinfo 
+processor      : 0
+vendor_id      : GenuineIntel
+cpu family      : 6
+model      : 61
+model name      : Intel Core Processor (Broadwell)
+stepping      : 2
+microcode      : 0x1
+cpu MHz      : 2194.655
+cache size      : 4096 KB
+physical id   : 0
+siblings      : 1
+core id      : 0
+cpu cores      : 1
+apicid      : 0
+initial apicid   : 0
+fpu         : yes
+fpu_exception   : yes
+cpuid level   : 13
+wp         : yes
+flags      : fpu vme de pse tsc msr pae mce cx8 apic sep mtrr pge mca
+ cmov pat pse36 clflush mmx fxsr sse sse2 syscall nx rdtscp lm
+ constant_tsc rep_good nopl xtopology eagerfpu pni pclmulqdq 
+ ssse3 fma cx16 pcid sse4_1 sse4_2 x2apic movbe popcnt tsc_ 
+ deadline_timer aes xsave avx f16c rdrand hypervisor lahf_lm 
+ abm 3dnowprefetch arat fsgsbase bmi1 hle avx2 smep bmi2 erms
+ invpcid rtm rdseed adx smap xsaveopt
+bogomips      : 4389.69
+clflush size   : 64
+cache_alignment   : 64
+address sizes   : 40 bits physical, 48 bits virtual
 power management:
 ```
 
@@ -652,7 +652,7 @@ power management:
 在Linux内核**启动的命令**行中加上“**isolcpus**=”参数，可以实现CPU的隔离，使得在系统启动后普通进程默认都不会被调度到被隔离的CPU上执行。例如，隔离cpu4和cpu5的内核启动命令行如下：
 
 ```
-[root@kvm-host ~]# cat /proc/cmdline ￼
+[root@kvm-host ~]# cat /proc/cmdline 
 BOOT_IMAGE=/vmlinuz-3.10.0-514.el7.x86_64 root=/dev/mapper/rhel-root ro crashkernel=auto rd.lvm.lv=rhel/root rd.lvm.lv=rhel/swap rhgb quiet LANG=en_US.UTF-8 intel_iommu=on isolcpus=4,5
 ```
 
@@ -662,40 +662,40 @@ BOOT_IMAGE=/vmlinuz-3.10.0-514.el7.x86_64 root=/dev/mapper/rhel-root ro crashker
 
 ```
 [root@kvm-host ~]# ps -eLo psr | grep -e "^[[:blank:]]*0$" | wc -l
-23￼
+23
 [root@kvm-host ~]# ps -eLo psr | grep -e "^[[:blank:]]*1$" | wc -l
-10￼
-[root@kvm-host ~]# ps -eLo psr | grep -e "^[[:blank:]]*2$" | wc -l￼
-28￼
+10
+[root@kvm-host ~]# ps -eLo psr | grep -e "^[[:blank:]]*2$" | wc -l
+28
 [root@kvm-host ~]# ps -eLo psr | grep -e "^[[:blank:]]*3$" | wc -l
-23￼
+23
 [root@kvm-host ~]# ps -eLo psr | grep -e "^[[:blank:]]*4$" | wc -l
-5￼
+5
 [root@kvm-host ~]# ps -eLo psr | grep -e "^[[:blank:]]*5$" | wc -l
-6￼
+6
 [root@kvm-host ~]# ps -eLo ruser,pid,ppid,lwp,psr,args | awk '{if($5==5) print $0}'
-root         32      2     32   5 [watchdog/5]￼
-root         33      2     33   5 [migration/5]￼
-root         34      2     34   5 [ksoftirqd/5]￼
-root         35      2     35   5 [kworker/5:0]￼
-root         36      2     36   5 [kworker/5:0H]￼
-root       5439      2   5439   5 [kworker/5:1]￼
+root         32      2     32   5 [watchdog/5]
+root         33      2     33   5 [migration/5]
+root         34      2     34   5 [ksoftirqd/5]
+root         35      2     35   5 [kworker/5:0]
+root         36      2     36   5 [kworker/5:0H]
+root       5439      2   5439   5 [kworker/5:1]
 [root@kvm-host ~]# ps -eLo ruser,pid,ppid,lwp,psr,args | awk '{if($5==4) print $0}'
-root         27      2     27   4 [watchdog/4]￼
-root         28      2     28   4 [migration/4]￼
-root         29      2     29   4 [ksoftirqd/4]￼
-root         30      2     30   4 [kworker/4:0]￼
-root         31      2     31   4 [kworker/4:0H]￼
-[root@kvm-host ~]# ps -eLo ruser,pid,ppid,lwp,psr,args | awk '{if($5==1) print $0}'￼
-root         12      2     12   1 [watchdog/1]￼
-root         13      2     13   1 [migration/1]￼
-root         14      2     14   1 [ksoftirqd/1]￼
-root         16      2     16   1 [kworker/1:0H]￼
-root        491      2    491   1 [kworker/1:1]￼
-root       1220      2   1220   1 [kworker/1:1H]￼
+root         27      2     27   4 [watchdog/4]
+root         28      2     28   4 [migration/4]
+root         29      2     29   4 [ksoftirqd/4]
+root         30      2     30   4 [kworker/4:0]
+root         31      2     31   4 [kworker/4:0H]
+[root@kvm-host ~]# ps -eLo ruser,pid,ppid,lwp,psr,args | awk '{if($5==1) print $0}'
+root         12      2     12   1 [watchdog/1]
+root         13      2     13   1 [migration/1]
+root         14      2     14   1 [ksoftirqd/1]
+root         16      2     16   1 [kworker/1:0H]
+root        491      2    491   1 [kworker/1:1]
+root       1220      2   1220   1 [kworker/1:1H]
 gdm        4050   4009   4050   1 /usr/libexec/gnome-settings-daemon
 root       6374   6008   6374   1 /usr/libexec/tracker-miner-apps
-root       7521      2   7521   1 [kworker/1:2]￼
+root       7521      2   7521   1 [kworker/1:2]
 root       8332   6623   8332   1 ps -eLo ruser,pid,ppid,lwp,psr,args
 ```
 
@@ -710,58 +710,58 @@ root       8332   6623   8332   1 ps -eLo ruser,pid,ppid,lwp,psr,args
 此操作过程的命令行如下：
 
 ```
-#启动一个客户机￼
-[root@kvm-host ~]# qemu-system-x86_64 -enable-kvm -smp 2 -m 4G rhel7.img -daemonize￼
-￼
-#查看代表vCPU的QEMU线程￼
-[root@kvm-host ~]# ps -eLo ruser,pid,ppid,lwp,psr,args | grep qemu | grep -v grep￼
-root       8645      1   8645   6 qemu-system-x86_64 -enable-kvm -smp 2 -m 4G rhel7.img -daemonize￼
-root       8645      1   8646  25 qemu-system-x86_64 -enable-kvm -smp 2 -m 4G rhel7.img -daemonize￼
-root       8645      1   8647   2 qemu-system-x86_64 -enable-kvm -smp 2 -m 4G rhel7.img -daemonize￼
-root       8645      1   8648   0 qemu-system-x86_64 -enable-kvm -smp 2 -m 4G rhel7.img -daemonize￼
-root       8645      1   8649   3 qemu-system-x86_64 -enable-kvm -smp 2 -m 4G rhel7.img -daemonize￼
-root       8645      1   8651  17 qemu-system-x86_64 -enable-kvm -smp 2 -m 4G rhel7.img -daemonize￼
-￼
-#绑定代表整个客户机的QEMU进程，使其运行在cpu4上￼
-[root@kvm-host ~]# taskset -pc 4 8645￼
-pid 8645's current affinity list: 0-3,6-87￼
-pid 8645's new affinity list: 4￼
-#绑定第1个vCPU的线程，使其运行在cpu4上￼
-[root@kvm-host ~]# taskset -pc 4 8649￼
-pid 8649's current affinity list: 0-3,6-87￼
-pid 8649's new affinity list: 4￼
-#绑定第2个vCPU的线程，使其运行在cpu5上￼
-[root@kvm-host ~]# taskset -pc 5 8651￼
-pid 8651's current affinity list: 0-3,6-87￼
-pid 8651's new affinity list: 5￼
-￼
-#查看QEMU线程的绑定是否生效，下面的第5列为处理器亲和性￼
-[root@kvm-host ~]# ps -eLo ruser,pid,ppid,lwp,psr,args | grep qemu | grep -v grep￼
-root       8645      1   8645   4 qemu-system-x86_64 -enable-kvm -smp 2 -m 4G rhel7.img -daemonize￼
-root       8645      1   8646  25 qemu-system-x86_64 -enable-kvm -smp 2 -m 4G rhel7.img -daemonize￼
-root       8645      1   8647   2 qemu-system-x86_64 -enable-kvm -smp 2 -m 4G rhel7.img -daemonize￼
-root       8645      1   8649   4 qemu-system-x86_64 -enable-kvm -smp 2 -m 4G rhel7.img -daemonize￼
-root       8645      1   8651   5 qemu-system-x86_64 -enable-kvm -smp 2 -m 4G rhel7.img -daemonize￼
-#执行vCPU的绑定后，查看在cpu4上运行的线程￼
-[root@kvm-host ~]# ps -eLo ruser,pid,ppid,lwp,psr,args | awk '{if($5==4) print $0}'￼
-root         27      2     27   4 [watchdog/4]￼
-root         28      2     28   4 [migration/4]￼
-root         29      2     29   4 [ksoftirqd/4]￼
-root         30      2     30   4 [kworker/4:0]￼
-root         31      2     31   4 [kworker/4:0H]￼
-root       8645      1   8645   4 qemu-system-x86_64 -enable-kvm -smp 2 -m 4G rhel7.img -daemonize￼
-root       8645      1   8649   4 qemu-system-x86_64 -enable-kvm -smp 2 -m 4G rhel7.img -daemonize￼
-root       9478      2   9478   4 [kworker/4:1H]￼
-root       9490      2   9490   4 [kworker/4:1]￼
-#执行vCPU的绑定后，查看在cpu5上运行的线程￼
-[root@kvm-host ~]# ps -eLo ruser,pid,ppid,lwp,psr,args | awk '{if($5==5) print $0}'￼
-root         32      2     32   5 [watchdog/5]￼
-root         33      2     33   5 [migration/5]￼
-root         34      2     34   5 [ksoftirqd/5]￼
-root         35      2     35   5 [kworker/5:0]￼
-root         36      2     36   5 [kworker/5:0H]￼
-root       5439      2   5439   5 [kworker/5:1]￼
-root       8645      1   8651   5 qemu-system-x86_64 -enable-kvm -smp 2 -m 4G￼ rhel7.img -daemonize
+#启动一个客户机
+[root@kvm-host ~]# qemu-system-x86_64 -enable-kvm -smp 2 -m 4G rhel7.img -daemonize
+
+#查看代表vCPU的QEMU线程
+[root@kvm-host ~]# ps -eLo ruser,pid,ppid,lwp,psr,args | grep qemu | grep -v grep
+root       8645      1   8645   6 qemu-system-x86_64 -enable-kvm -smp 2 -m 4G rhel7.img -daemonize
+root       8645      1   8646  25 qemu-system-x86_64 -enable-kvm -smp 2 -m 4G rhel7.img -daemonize
+root       8645      1   8647   2 qemu-system-x86_64 -enable-kvm -smp 2 -m 4G rhel7.img -daemonize
+root       8645      1   8648   0 qemu-system-x86_64 -enable-kvm -smp 2 -m 4G rhel7.img -daemonize
+root       8645      1   8649   3 qemu-system-x86_64 -enable-kvm -smp 2 -m 4G rhel7.img -daemonize
+root       8645      1   8651  17 qemu-system-x86_64 -enable-kvm -smp 2 -m 4G rhel7.img -daemonize
+
+#绑定代表整个客户机的QEMU进程，使其运行在cpu4上
+[root@kvm-host ~]# taskset -pc 4 8645
+pid 8645's current affinity list: 0-3,6-87
+pid 8645's new affinity list: 4
+#绑定第1个vCPU的线程，使其运行在cpu4上
+[root@kvm-host ~]# taskset -pc 4 8649
+pid 8649's current affinity list: 0-3,6-87
+pid 8649's new affinity list: 4
+#绑定第2个vCPU的线程，使其运行在cpu5上
+[root@kvm-host ~]# taskset -pc 5 8651
+pid 8651's current affinity list: 0-3,6-87
+pid 8651's new affinity list: 5
+
+#查看QEMU线程的绑定是否生效，下面的第5列为处理器亲和性
+[root@kvm-host ~]# ps -eLo ruser,pid,ppid,lwp,psr,args | grep qemu | grep -v grep
+root       8645      1   8645   4 qemu-system-x86_64 -enable-kvm -smp 2 -m 4G rhel7.img -daemonize
+root       8645      1   8646  25 qemu-system-x86_64 -enable-kvm -smp 2 -m 4G rhel7.img -daemonize
+root       8645      1   8647   2 qemu-system-x86_64 -enable-kvm -smp 2 -m 4G rhel7.img -daemonize
+root       8645      1   8649   4 qemu-system-x86_64 -enable-kvm -smp 2 -m 4G rhel7.img -daemonize
+root       8645      1   8651   5 qemu-system-x86_64 -enable-kvm -smp 2 -m 4G rhel7.img -daemonize
+#执行vCPU的绑定后，查看在cpu4上运行的线程
+[root@kvm-host ~]# ps -eLo ruser,pid,ppid,lwp,psr,args | awk '{if($5==4) print $0}'
+root         27      2     27   4 [watchdog/4]
+root         28      2     28   4 [migration/4]
+root         29      2     29   4 [ksoftirqd/4]
+root         30      2     30   4 [kworker/4:0]
+root         31      2     31   4 [kworker/4:0H]
+root       8645      1   8645   4 qemu-system-x86_64 -enable-kvm -smp 2 -m 4G rhel7.img -daemonize
+root       8645      1   8649   4 qemu-system-x86_64 -enable-kvm -smp 2 -m 4G rhel7.img -daemonize
+root       9478      2   9478   4 [kworker/4:1H]
+root       9490      2   9490   4 [kworker/4:1]
+#执行vCPU的绑定后，查看在cpu5上运行的线程
+[root@kvm-host ~]# ps -eLo ruser,pid,ppid,lwp,psr,args | awk '{if($5==5) print $0}'
+root         32      2     32   5 [watchdog/5]
+root         33      2     33   5 [migration/5]
+root         34      2     34   5 [ksoftirqd/5]
+root         35      2     35   5 [kworker/5:0]
+root         36      2     36   5 [kworker/5:0H]
+root       5439      2   5439   5 [kworker/5:1]
+root       8645      1   8651   5 qemu-system-x86_64 -enable-kvm -smp 2 -m 4G rhel7.img -daemonize
 ```
 
 注: 也可以通过修改xml实现
@@ -779,8 +779,8 @@ taskset -pc cpulist pid
 在上面命令行中，根据ps命令可以看到QEMU的线程和进程的关系，但如何查看vCPU与QEMU线程之间的关系呢？可以切换（使用“Ctrl\+Alt\+2”组合键）到QEMU monitor中进行查看，运行“info cpus”命令即可（还记得3.6节中运行过的“info kvm”命令吧），其输出结果如下：
 
 ```
-(qemu) info cpus￼
-* CPU #0: pc=0xffffffff81060eb6 (halted) thread_id=8649￼
+(qemu) info cpus
+* CPU #0: pc=0xffffffff81060eb6 (halted) thread_id=8649
   CPU #1: pc=0xffffffff81060eb6 (halted) thread_id=8651
 ```
 
