--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第2篇 KVM虚拟化进阶/第7章 KVM内存管理高级技巧/2. 透明大页.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第2篇 KVM虚拟化进阶/第7章 KVM内存管理高级技巧/2. 透明大页.md
@@ -39,7 +39,7 @@
 
 # 2 透明大页原理
 
-而**透明大页**￼（Transparent Hugepage）既发挥了大页的一些优点，又能**避免**了**上述缺点**。
+而**透明大页**（Transparent Hugepage）既发挥了大页的一些优点，又能**避免**了**上述缺点**。
 
 透明大页（THP）是Linux内核的一个特性。目前一些流行的Linux发行版（如RHEL 6/7、Ubuntu 12.04以后等）的内核都默认提供了透明大页的支持。
 
@@ -55,7 +55,7 @@
 
 内核线程khugepaged的作用是，**扫描正在运行的进程**，然后**试图将使用的常规内存页转换到使用大页！！！**。
 
-目前，**透明大页**仅仅**支持匿名内存（anonymous memory）的映射**，对磁盘缓存（page cache）和共享内存（shared memory）￼的支持还处于开发之中。
+目前，**透明大页**仅仅**支持匿名内存（anonymous memory）的映射**，对磁盘缓存（page cache）和共享内存（shared memory）的支持还处于开发之中。
 
 Linux 4.8开始, 加入了对tmpfs和shmfs的page cache使用transparent huge page的支持. 
 
@@ -74,9 +74,9 @@ Linux内核代码中关于透明大页的文档, 在 Documentation/vm/transhuge.
 1）在**编译Linux内核**时，配置好透明大页的支持。配置文件中的示例如下：
 
 ```
-CONFIG_HAVE_ARCH_TRANSPARENT_HUGEPAGE=y￼
-CONFIG_TRANSPARENT_HUGEPAGE=y￼
-CONFIG_TRANSPARENT_HUGEPAGE_ALWAYS=y￼
+CONFIG_HAVE_ARCH_TRANSPARENT_HUGEPAGE=y
+CONFIG_TRANSPARENT_HUGEPAGE=y
+CONFIG_TRANSPARENT_HUGEPAGE_ALWAYS=y
 # CONFIG_TRANSPARENT_HUGEPAGE_MADVISE is not set
 ```
 
@@ -95,18 +95,18 @@ transparent_hugepage=[always|madvise|never]
 2）在运行的宿主机中查看及配置**透明大页的使用方式**，命令行如下：
 
 ```
-[root@kvm-host ~]# cat /sys/kernel/mm/transparent_hugepage/enabled ￼
-[always] madvise never￼
+[root@kvm-host ~]# cat /sys/kernel/mm/transparent_hugepage/enabled 
+[always] madvise never
 
-[root@kvm-host ~]# cat /sys/kernel/mm/transparent_hugepage/defrag ￼
-always defer [madvise] never￼
+[root@kvm-host ~]# cat /sys/kernel/mm/transparent_hugepage/defrag 
+always defer [madvise] never
 
 [root@kvm-host ~]# cat /sys/kernel/mm/transparent_hugepage/khugepaged/defrag
-1￼
+1
 
-[root@kvm-host ~]# echo never > /sys/kernel/mm/transparent_hugepage/defrag￼
+[root@kvm-host ~]# echo never > /sys/kernel/mm/transparent_hugepage/defrag
 
-[root@kvm-host ~]# cat /sys/kernel/mm/transparent_hugepage/defrag￼
+[root@kvm-host ~]# cat /sys/kernel/mm/transparent_hugepage/defrag
 always madvise [never]
 ```
 
@@ -115,8 +115,8 @@ always madvise [never]
 ### 3.2.1 enable接口
 
 ```
-[root@kvm-host ~]# cat /sys/kernel/mm/transparent_hugepage/enabled ￼
-[always] madvise never￼
+[root@kvm-host ~]# cat /sys/kernel/mm/transparent_hugepage/enabled 
+[always] madvise never
 ```
 
 “/sys/kernel/mm/transparent\_hugepage/**enabled**”接口的值
@@ -135,8 +135,8 @@ enable接口对**khugepaged内核进程**的影响:
 ### 3.2.1 defrag接口
 
 ```
-[root@kvm-host ~]# cat /sys/kernel/mm/transparent_hugepage/defrag ￼
-always defer [madvise] never￼
+[root@kvm-host ~]# cat /sys/kernel/mm/transparent_hugepage/defrag 
+always defer [madvise] never
 ```
 
 defrag内存碎片整理
@@ -147,7 +147,7 @@ defrag内存碎片整理
 
 ```
 [root@kvm-host ~]# cat /sys/kernel/mm/transparent_hugepage/khugepaged/defrag
-1￼
+1
 ```
 
 而“transparent\_hugepage/**khugepaged/defrag**”接口表示在**khugepaged进程运行时**进行**内存碎片的整理工作**，它运行的**频率较低**。
@@ -171,10 +171,10 @@ defrag内存碎片整理
 启动前，通过下面的命令行可以看到系统中已使用了132个透明大页。
 
 ```
-[root@kvm-host ~]# cat /proc/meminfo | grep -i AnonHugePages￼
-AnonHugePages:    270336 kB￼
+[root@kvm-host ~]# cat /proc/meminfo | grep -i AnonHugePages
+AnonHugePages:    270336 kB
 
-[root@kvm-host ~]# echo $((270336/2048))￼
+[root@kvm-host ~]# echo $((270336/2048))
 132
 ```
 
@@ -193,10 +193,10 @@ AnonHugePages:    270336 kB￼
 注意，这个数字随系统运行而**动态变化**，并且，客户机并没有“\-mem\-prealloc”，所以此时系统并没有真的给它分配16G内存。
 
 ```
-[root@kvm-host ~]# cat /proc/meminfo | grep -i AnonHugePages￼
-AnonHugePages:   1548288 kB￼
+[root@kvm-host ~]# cat /proc/meminfo | grep -i AnonHugePages
+AnonHugePages:   1548288 kB
 
-[root@kvm-host ~]# echo $((1548288/2048))￼
+[root@kvm-host ~]# echo $((1548288/2048))
 756
 ```
 
@@ -209,28 +209,28 @@ AnonHugePages:   1548288 kB￼
 这说明QEMU启动客户机，什么特殊设置也没有做，就默默地（莫名其妙地）利用上了透明大页。
 
 ```
-[root@kvm-host ~]# ps aux | grep qemu￼
-root       7212  7.9  1.0 12822852 1321188 pts/1 Sl+ 16:02   0:47 qemu-system-x86_64 -enable-kvm -cpu host -smp 4 -m 8G -drive file=./rhel7.img,format=raw,if=virtio -device virtio-net-pci,netdev=nic0 -netdev bridge,id=nic0,br=virbr0 -snapshot￼
-root       7614  0.0  0.0 112648   960 pts/2    S+   16:13   0:00 grep --color=auto qemu￼
+[root@kvm-host ~]# ps aux | grep qemu
+root       7212  7.9  1.0 12822852 1321188 pts/1 Sl+ 16:02   0:47 qemu-system-x86_64 -enable-kvm -cpu host -smp 4 -m 8G -drive file=./rhel7.img,format=raw,if=virtio -device virtio-net-pci,netdev=nic0 -netdev bridge,id=nic0,br=virbr0 -snapshot
+root       7614  0.0  0.0 112648   960 pts/2    S+   16:13   0:00 grep --color=auto qemu
 
-[root@kvm-host ~]# cat /proc/7212/smaps | grep -e "AnonHugePages"￼
-...￼
-AnonHugePages:      2048 kB￼
-...￼
-AnonHugePages:   1253376 kB￼
-...￼
-AnonHugePages:      6144 kB￼
+[root@kvm-host ~]# cat /proc/7212/smaps | grep -e "AnonHugePages"
+...
+AnonHugePages:      2048 kB
+...
+AnonHugePages:   1253376 kB
+...
+AnonHugePages:      6144 kB
 ...
 ```
 
 # 4 THP的提出
 
-在KVM 2010年论坛（KVM Forum 2010）￼上，透明大页的作者Andrea Arcangeli发表了一个题为“Transparent Hugepage Support”的演讲，其中展示了不少透明大页对性能提升的数据。
+在KVM 2010年论坛（KVM Forum 2010）上，透明大页的作者Andrea Arcangeli发表了一个题为“Transparent Hugepage Support”的演讲，其中展示了不少透明大页对性能提升的数据。
 
 KVM Forum是KVM社区每年一届的技术盛会, 一般会讨论KVM中最新功能和技术、未来发展方向等. https://www.linux-kvm.org/page/KVM_Forum_2010 是关于"KVM Forum 2010"的, 有那次大会的PPT, 可以下载.
 
 图7-1展示了在是否打开宿主机和客户机的透明大页（THP）、是否打开Intel EPT特性时，内核编译（kernel build）所需时间长度的对比，时间越短说明效率越高。
-￼
+
 ![](./images/2019-05-28-10-39-42.png)
 
 由图7-1所示的数据可知，当打开EPT的支持且在宿主机和客户机中同时打开透明大页的支持时，内核编译的效率只比原生的非虚拟化环境中的系统降低了5.67%；而打开EPT但关闭宿主机和客户机的透明大页时，内核编译效率比原生系统降低了24.81%；EPT和透明大页全部关闭时，内核编译效率比原生系统降低了260.15%。这些数据说明，EPT对内存访问效率有很大的提升作用，透明大页对内存访问效率也有较大的提升作用。
