--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第2篇 KVM虚拟化进阶/第8章 KVM迁移/1. 动态迁移.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第2篇 KVM虚拟化进阶/第8章 KVM迁移/1. 动态迁移.md
@@ -58,7 +58,7 @@
 
 在**传统应用环境**中，没有虚拟化技术的支持，**系统整体的迁移**主要是**静态迁移**。这种迁移主要依靠**系统备份**和**恢复技术**，将系统的软件完全复制到另一台机器上，可以通过先做出系统的镜像文件，然后复制到其他机器上，或者直接通过硬盘相互复制来达到迁移的目的。
 
-在非虚拟化环境中也有**动态迁移的概念**，但都是**对某个（或某一组）工作负载**的迁移，需要**特殊系统的支持**才能实现，而且技术也不够成熟。如哥伦比亚大学的Zap￼系统，它通过在操作系统上提供了一个很薄的虚拟化层（这和现在主流的虚拟化技术不一样），可以实现将工作负载迁移到另一台机器上。
+在非虚拟化环境中也有**动态迁移的概念**，但都是**对某个（或某一组）工作负载**的迁移，需要**特殊系统的支持**才能实现，而且技术也不够成熟。如哥伦比亚大学的Zap系统，它通过在操作系统上提供了一个很薄的虚拟化层（这和现在主流的虚拟化技术不一样），可以实现将工作负载迁移到另一台机器上。
 
 ## 1.3 虚拟化环境的迁移
 
@@ -134,7 +134,7 @@
 ### 3.2.1 基于共享存储的动态迁移过程
 
 KVM中一个基于**共享存储的动态迁移过程**如图8\-1所示。
-￼
+
 ![](./images/2019-05-29-10-41-27.png)
 
 在**不考虑磁盘存储复制**的情况下（基于**共享存储系统**），KVM动态迁移的具体迁移过程为：
@@ -159,7 +159,7 @@ KVM中一个基于**共享存储的动态迁移过程**如图8\-1所示。
 在KVM中，**动态迁移服务停机时间**会与实际的**工作负载**和**网络带宽**等诸多因素有关，一般在**数十毫秒到几秒钟之间**，当然如果网络带宽过小或网络拥塞，会导致服务停机时间变长。
 
 必要的时候，服务器端在动态迁移时暂停数百毫秒或数秒钟后恢复服务，对于一些终端用户来说是可以接受的，可能表现为：浏览器访问网页速度会慢一点，或者ssh远程操作过程中有一两秒不能操作但ssh连接并没有断开（不需要重新建立连接）。笔者曾经测试过**KVM动态迁移过程**中的**服务停机时间**，当时在**客户机**中运行了一个**UnixBench（一个基准测试工具**），然后进行动态迁移，经过测量，某次动态迁移中服务停机时间约为900毫秒。这次测试是在**客户机**中运行**netperf**（一个测试网络的基准测试工具）的**服务端**，在另外一台机器上运行**netperf的客户端**，通过查看netperf客户端收到服务端响应数据包在迁移过程中**中断的间隔时间**来粗略地估算客户机迁移过程中服务停机时间。某次实验的粗略结果如图8\-2所示，可以看出时间从4.6秒到5.5秒为动态迁移过程中大致的服务停机时间。
-￼
+
 ![](./images/2019-05-29-10-55-47.png)
 
 ### 3.2.4 KVM动态迁移的
@@ -174,7 +174,7 @@ KVM中一个基于**共享存储的动态迁移过程**如图8\-1所示。
 
 3）**64位的客户机**只能在**64位宿主机**之间迁移，而32位客户机可以在32位宿主机和64位宿主机之间迁移。
 
-4）动态迁移的源宿主机和目的宿主机对**NX￼（Never eXecute**）位的**设置是相同**，要么同为关闭状态，要么同为打开状态。在Intel平台上的Linux系统中，用“**cat/proc/cpuinfo|grep nx**”命令可以查看是否有NX的支持。
+4）动态迁移的源宿主机和目的宿主机对**NX（Never eXecute**）位的**设置是相同**，要么同为关闭状态，要么同为打开状态。在Intel平台上的Linux系统中，用“**cat/proc/cpuinfo|grep nx**”命令可以查看是否有NX的支持。
 
 5）在进行动态迁移时，**被迁移客户机的名称是唯一的**，在目的宿主机上不能有与源宿主机中被迁移客户机同名的客户机存在。另外，客户机名称可以包含字母、数字和“_”“.”“-”等特殊字符。
 
@@ -193,16 +193,16 @@ KVM中一个基于**共享存储的动态迁移过程**如图8\-1所示。
 1）在源宿主机挂载NFS的上客户机镜像，并启动客户机。命令行操作如下：
 
 ```
-[root@kvm-host1 ~]# mount my-nfs:/rw-images/ /mnt/images/￼
-[root@kvm-host1 ~]# df -h | grep images￼
-192.168.11.3:/mnt/images  734G  1.7G  695G   1% /mnt/images￼
+[root@kvm-host1 ~]# mount my-nfs:/rw-images/ /mnt/images/
+[root@kvm-host1 ~]# df -h | grep images
+192.168.11.3:/mnt/images  734G  1.7G  695G   1% /mnt/images
 [root@kvm-host1 ~]# qemu-system-x86_64 /mnt/images/rhel7.img -smp 2 -m 2048 -net nic -net tap
 ```
 
 这里的特别之处是没有指定客户机中的CPU模型，**默认是qemu64**这个基本的模型。当然也可自行设置为“\-cpu Broadwell”等指定特定的模型，不过要**保证在目的主机上也用相同的命令**。同时指定相同的某个CPU模型，可以让客户机在不同的几代平台上的迁移更加稳定。
 
 另外，还要在客户机中**运行一个程序**（这里执行了“top”命令），以便在动态迁移后检查它**是否仍然正常地继续执行**。在动态迁移前，客户机运行“top”命令的状态如图8\-3所示。
-￼
+
 ![](./images/2019-05-29-11-12-28.png)
 
 ### 4.1.2 目的宿主机启动新客户机
@@ -210,9 +210,9 @@ KVM中一个基于**共享存储的动态迁移过程**如图8\-1所示。
 2）目的宿主机上也挂载NFS上的客户机镜像的目录，并且启动一个客户机用于接收动态迁移过来内存内容等。命令行操作如下：
 
 ```
-[root@kvm-host2 ~]# mount my-nfs:/rw-images/ /mnt/￼
-[root@kvm-host2 ~]# df -h | grep images￼
-192.168.11.3:/mnt/images  734G  1.7G  695G   1% /mnt/images￼
+[root@kvm-host2 ~]# mount my-nfs:/rw-images/ /mnt/
+[root@kvm-host2 ~]# df -h | grep images
+192.168.11.3:/mnt/images  734G  1.7G  695G   1% /mnt/images
 [root@kvm-host2 ~]# qemu-system-x86_64 /mnt/images/rhel7.img -smp 2 -m 2048 -net nic -net tap -incoming tcp:0:6666
 ```
 
@@ -236,7 +236,7 @@ KVM中一个基于**共享存储的动态迁移过程**如图8\-1所示。
 ### 4.1.4 新虚拟机确认
 
 4）在本示例中，migrate命令从开始到执行完成，大约用了3秒钟时间（万兆网络环境，且此处无须传输磁盘镜像）。在执行完迁移后，在目的主机上，之前处于迁移监听模式的客户机就开始正常运行了，其中运行的正是动态迁移过来的客户机，可以看到客户机中的“top”命令在迁移后继续运行，如图8\-5所示。
-￼
+
 ![](./images/2019-05-29-11-20-00.png)
 
 至此，使用**NFS**作为**共享存储的动态迁移**就已经正确完成了。
@@ -257,7 +257,7 @@ KVM中一个基于**共享存储的动态迁移过程**如图8\-1所示。
 1）在**源宿主机**上，根据一个后端镜像文件，创建一个qcow2格式的镜像文件，并启动客户机。命令行如下：
 
 ```
-[root@kvm-host1 ~]# qemu-img create -f qcow2 -o backing_file=/mnt/rhel7.img,size=20G rhel7.qcow2￼
+[root@kvm-host1 ~]# qemu-img create -f qcow2 -o backing_file=/mnt/rhel7.img,size=20G rhel7.qcow2
 
 [root@kvm-host1 ~]# qemu-system-x86_64 rhel7.qcow2 -smp 2 -m 2048 -net nic -net tap
 ```
@@ -269,7 +269,7 @@ KVM中一个基于**共享存储的动态迁移过程**如图8\-1所示。
 2）在目的宿主机上，也建立相同的qcow2格式的客户机镜像，并带有“\-**incoming**”参数来启动客户机使其处于迁移监听状态。命令行如下：
 
 ```
-[root@kvm-host2 ~]# qemu-img create -f qcow2 -o backing_file=/mnt/rhel7.img,size=20G rhel7.qcow2￼
+[root@kvm-host2 ~]# qemu-img create -f qcow2 -o backing_file=/mnt/rhel7.img,size=20G rhel7.qcow2
 
 [root@kvm-host2 ~]# qemu-system-x86_64 rhel7.qcow2 -smp 2 -m 2048 -net nic -net tap -incoming tcp:0:6666
 ```
@@ -281,9 +281,9 @@ KVM中一个基于**共享存储的动态迁移过程**如图8\-1所示。
 与此同时，在**目的宿主机！！！** 上，在**启动迁移监听状态的客户机的命令行**所在标准输出中，也会提示正在传输的（增量地）磁盘镜像百分比。当传输完成时也会提示“Completed 100%”，如下：
 
 ```
-[root@kvm-host2 ~]# qemu-system-x86_64 rhel7.qcow2 -smp 2 -m 2048 -net nic -net tap -incoming tcp:0:6666￼
-VNC server running on '::1:5901'￼
-Receiving block device images￼
+[root@kvm-host2 ~]# qemu-system-x86_64 rhel7.qcow2 -smp 2 -m 2048 -net nic -net tap -incoming tcp:0:6666
+VNC server running on '::1:5901'
+Receiving block device images
 Completed 100 %
 ```
 
@@ -304,18 +304,18 @@ Completed 100 %
 最后，介绍在QEMU monitor中与动态迁移相关的几个命令。可以用“help command”来查询命令的用法，如下：
 
 ```
-(qemu) help migrate￼
-migrate [-d] [-b] [-i] uri -- migrate to URI (using -d to not wait for completion)￼
-    -b for migration without shared storage with full copy of disk￼
-    -i for migration without shared storage with incremental copy of disk (base image shared between src and destination)￼
-(qemu) help migrate_cancel￼
+(qemu) help migrate
+migrate [-d] [-b] [-i] uri -- migrate to URI (using -d to not wait for completion)
+    -b for migration without shared storage with full copy of disk
+    -i for migration without shared storage with incremental copy of disk (base image shared between src and destination)
+(qemu) help migrate_cancel
 migrate_cancel  -- cancel the current VM migration
-￼
-(qemu) help migrate_set_speed￼
-migrate_set_speed value -- set maximum speed (in bytes) for migrations. Defaults to MB if no size suffix is specified, ie. B/K/M/G/T￼
 
-(qemu) help migrate_set_downtime￼
-migrate_set_downtime value -- set maximum tolerated downtime (in seconds) for migrations￼
+(qemu) help migrate_set_speed
+migrate_set_speed value -- set maximum speed (in bytes) for migrations. Defaults to MB if no size suffix is specified, ie. B/K/M/G/T
+
+(qemu) help migrate_set_downtime
+migrate_set_downtime value -- set maximum tolerated downtime (in seconds) for migrations
 
 (qemu) info migrate    ##show migration status
 ```
@@ -346,14 +346,14 @@ http://www.kernel.org/doc/Documentation/networking/bonding.txt
 在libvirt的客户机的XML配置文件中，关于该功能的配置示例如下：
 
 ```xml
-......￼
-<devices>￼
-    ......￼
-    <interface type='direct'>￼
-        <source dev='eth0' mode='passthrough'/>￼
-        <model type='virtio'/>￼
-    </interface>￼
-</devices>￼
+......
+<devices>
+    ......
+    <interface type='direct'>
+        <source dev='eth0' mode='passthrough'/>
+        <model type='virtio'/>
+    </interface>
+</devices>
 ......
 ```
 
