--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第4篇 虚拟化软件开发接口/第8章 libvirt虚拟化控制中间件/1. libvirt概述.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第4篇 虚拟化软件开发接口/第8章 libvirt虚拟化控制中间件/1. libvirt概述.md
@@ -71,7 +71,7 @@ http://libvirt.org/downloads.html#releases
 代码8-1 解压源码包，并进入解压后的文件目录
 
 ```
-$ gunzip -c libvirt-x.x.x.tar.gz | tar xvf -￼   
+$ gunzip -c libvirt-x.x.x.tar.gz | tar xvf -   
 $ cd libvirt-x.x.x
 ```
 
@@ -83,8 +83,8 @@ $ cd libvirt-x.x.x
 
 ```
 # ./configure --prefix=/usr --localstatedir=/var  --sysconfdir=/etc --enable-debug=yes
-$ ./configure [possible options]￼
-$ make￼
+$ ./configure [possible options]
+$ make
 $ sudo make install
 ```
 
@@ -109,8 +109,8 @@ https://libvirt.org/git/libvirt.git
 
 ```
 $ ./autogen.sh --system
-$ ./autogen.sh --prefix=$HOME/usr --enable-compile-warnings=error￼
-$ make￼
+$ ./autogen.sh --prefix=$HOME/usr --enable-compile-warnings=error
+$ make
 $ sudo make install
 ```
 
