--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第3章 构建KVM环境/5. 安装客户机.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第3章 构建KVM环境/5. 安装客户机.md
@@ -24,10 +24,10 @@ Formatting 'rhel7.img', fmt=raw size=42949672960
 上述就是用qemu\-img create命令创建了一个空白的guest image，以raw格式，image文件的名字是“rhel7.img”，大小是40G。虽然我们看到它的大小是40G，但是它并**不占用任何磁盘空间**。
 
 ```
-[root@kvm-host ~]# ls -lh rhel7.img ￼
--rw-r--r-- 1 root root 40G Oct 15 10:44 rhel7.img￼
+[root@kvm-host ~]# ls -lh rhel7.img 
+-rw-r--r-- 1 root root 40G Oct 15 10:44 rhel7.img
 
-[root@kvm-host ~]# du -h rhel7.img ￼
+[root@kvm-host ~]# du -h rhel7.img 
 0   rhel7.img
 ```
 
@@ -36,11 +36,11 @@ Formatting 'rhel7.img', fmt=raw size=42949672960
 qemu\-img也支持设置参数让你可以一开始就实际占有40G（当然建立的过程也就比较耗时，还会占用你更大空间。所以qemu\-img默认的方式是按需分配的），如下：
 
 ```
-[root@kvm-host ~]# qemu-img create -f raw -o preallocation=full rhel7.img 40G￼
-Formatting 'rhel7.img', fmt=raw size=42949672960 preallocation=full￼
+[root@kvm-host ~]# qemu-img create -f raw -o preallocation=full rhel7.img 40G
+Formatting 'rhel7.img', fmt=raw size=42949672960 preallocation=full
 
 [root@kvm-host ~]# ls -lh rhel7.img 
--rw-r--r-- 1 root root 40G Oct 15 10:58 rhel7.img￼
+-rw-r--r-- 1 root root 40G Oct 15 10:58 rhel7.img
 
 [root@kvm-host ~]# du -h rhel7.img 
 40G rhel7.img
@@ -53,7 +53,7 @@ Formatting 'rhel7.img', fmt=raw size=42949672960 preallocation=full￼
 创建完空白guest image之后，我们将RHEL 7安装所需的ISO文件准备好。
 
 ```
-[root@kvm-host ~]# ls -l  RHEL-7.2-20151030.0-Server-x86_64-dvd1.iso ￼
+[root@kvm-host ~]# ls -l  RHEL-7.2-20151030.0-Server-x86_64-dvd1.iso 
 -rw-r--r-- 1 root root 4043309056 Oct 30  2015 RHEL-7.2-20151030.0-Server-x86_64-dvd1.iso
 ```
 
@@ -69,10 +69,10 @@ qemu-system-x86_64 -enable-kvm -m 8G -smp 4 -boot once=d -cdrom RHEL-7.2-2015103
 
 # 4 安装虚拟机
 
-**默认情况**下，QEMU会**启动一个VNC server端口（5900**），可以用**vncviwer工具**￼来连接到**QEMU的VNC端口**查看客户机。
+**默认情况**下，QEMU会**启动一个VNC server端口（5900**），可以用**vncviwer工具**来连接到**QEMU的VNC端口**查看客户机。
 
 通过启动时的提示，这里可以使用“vncviewer：5900”命令**连接到QEMU启动的窗口**。根据命令行指定的启动顺序，当有CDROM时，客户机默认会从光驱引导，启动后即可进入客户机系统安装界面，如图3\-8所示。
-￼
+
 ![](./images/2019-05-15-22-58-47.png)
 
 可以选择Install安装客户机操作系统，和安装普通Linux系统类似，根据需要做磁盘分区、选择需要的软件包等。
