--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第3章 构建KVM环境/6. 启动第一个KVM客户机.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第3章 构建KVM环境/6. 启动第一个KVM客户机.md
@@ -15,7 +15,7 @@
 通过如下的简单命令行即可启动一个KVM的客户机。
 
 ```
-[root@kvm-host ~]#qemu-system-x86_64 -m 8G -smp 4 /root/rhel7.img￼
+[root@kvm-host ~]#qemu-system-x86_64 -m 8G -smp 4 /root/rhel7.img
 VNC server running on ‘::1:5900’
 ```
 
@@ -28,7 +28,7 @@ VNC server running on ‘::1:5900’
 
 在通过VNC链接到QEMU窗口后，可以按组合键**Ctrl+Alt+2**切换到**QEMU监视器窗口**。在监视器窗口中可以执行一些命令，比如执行“**info kvm**”命令来查看**当前QEMU是否使用KVM**，如图3-12所示（显示为**kvm support：enabled**）。
 
-![](./images/2019-05-15-23-02-31.png)￼
+![](./images/2019-05-15-23-02-31.png)
 
 用组合键**Ctrl+Alt+1**切换回普通的客户机查看窗口，就可以登录或继续使用客户机系统了。至此，你就已经启动属于自己的第一个KVM客户机了，尽情享受KVM虚拟化带来的快乐吧！
 
