--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -1758,7 +1758,7 @@ perf的子命令, 尤其`stat`, 有很多可扩展的选项, 通过`perf stat -h
 
 ## 9.3. Event Profiling: 事件分析
 
-除了以一定的时间间隔进行采样外，**CPU硬件计数器**触发的采样是**CPU性能分析**的另一种形式，可用于更加了解`cache misses`**高速缓存未命中**，`memory stall cycles`**内存停顿周期**和其他低级处理器事件。 
+除了以一定的**时间间隔**进行采样外，**CPU硬件计数器**触发的**采样！！！** 是**CPU性能分析**的另一种形式，可用于更加了解`cache misses`**高速缓存未命中**，`memory stall cycles`**内存停顿周期**和**其他低级处理器事件**。 
 
 可用的事件可以使用`perf list`找到：
 
